[package]
name = "libimagcounter"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[dependencies]
log = "0.3"
toml = "0.1.25"
semver = "0.2"
regex = "0.1"
clap = "2.1.1"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagentryfilter]
path = "../libimagentryfilter"

