[package]
name = "libimagcounter"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[profile.dev]
codegen-units = 2

[dependencies]
log = "0.3"
toml = "0.2.*"
semver = "0.2"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagerror]
path = "../libimagerror"

