[package]
name = "libimagentrymarkdown"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[profile.dev]
codegen-units = 2

[dependencies]
log = "0.3"
hoedown = "5.0.0"
crossbeam = "0.2"
url = "1.1"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagerror]
path = "../libimagerror"

