[package]
name = "libimagnotes"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[profile.dev]
codegen-units = 2

[dependencies]
semver = "0.2"
log = "0.3"
toml = "0.2.*"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagerror]
path = "../libimagerror"

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagentryedit]
path = "../libimagentryedit"

[dependencies.libimagentrytag]
path = "../libimagentrytag"

